Beginning to work on inter-stream exporting